--- a/estilos/style.css
+++ b/estilos/style.css
@@ -20,7 +20,7 @@ body {
 .tela {
     width: 500px;
     height: 320px;
-    background: linear-gradient(to right, #E8E8E8, #C1C1C1);
+    background: linear-gradient(to right, #E8E8E8, #C1C1C1); /*para dar uma testura de tela*/
     border: 2px solid #555;
     display: flex;
     flex-direction: column;
@@ -45,7 +45,7 @@ body {
     align-items: center;
     margin: 10px;
     cursor: pointer;
-    box-shadow: 3px 3px 0px #555;
+    box-shadow: 3px 3px 0px #555; /* Sobra no botão*/
 }
 .botao--branco {
     background-color: #FFF;
@@ -67,7 +67,7 @@ body {
 
 
 .d-1 {
-    flex: 1;
+    flex: 1; /*Oculpar toda a tela*/
     display: flex;
 }
 .d-1-left {
